Update cmake to add llvm library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,25 @@ list(REMOVE_ITEM SRC_FILES ${MAIN_SOURCE_FILE})
 
 add_executable(${CMAKE_PROJECT_NAME} ${SRC_FILES} ${MAIN_SOURCE_FILE})
 
+# ------------------------------------------------- #
+
+# Add LLVM
+
+find_package(LLVM REQUIRED CONFIG)
+
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+
+include_directories(${LLVM_INCLUDE_DIRS})
+separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
+add_definitions(${LLVM_DEFINITIONS_LIST})
+
+llvm_map_components_to_libnames(llvm_libs support core irreader)
+
+target_link_libraries(${CMAKE_PROJECT_NAME} ${llvm_libs})
+
+# ------------------------------------------------- #
+
 # Set up tests
 
 include(FetchContent)
