--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,6 @@ add_executable(${CMAKE_PROJECT_NAME} ${SRC_FILES} ${MAIN_SOURCE_FILE})
 # Add LLVM
 
 find_package(LLVM REQUIRED CONFIG)
-find_package(ZLIB REQUIRED)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
@@ -41,9 +40,17 @@ include_directories(${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
-llvm_map_components_to_libnames(llvm_libs support core irreader)
+llvm_map_components_to_libnames(llvm_libs
+        Core
+        ExecutionEngine
+        Object
+        OrcJIT
+        Support
+        native)
 
-target_link_libraries(${CMAKE_PROJECT_NAME} ${llvm_libs} ZLIB::ZLIB)
+add_compile_definitions(LLVM_DISABLE_ABI_BREAKING_CHECKS_ENFORCING=1)
+
+target_link_libraries(${CMAKE_PROJECT_NAME} ${llvm_libs})
 
 # ------------------------------------------------- #
 
